	in nanoseconds, the config file values are in ns.  This affects
	grid_resolution and grid_align.  Time_goto, resolution and cursor_add
	were already correct.

**	If a common prefix is present on every signal being displayed,
	then that prefix is no longer drawn, though it is still kept inside
	Dinotrace.  Drawing prefixes may be reenabled with a button in the
	Configure window, and with the draw_prefix configuration switch.
	[Dominik Strasser]

****	Fixed tempest files which start with phase b. [Steve Hoover]

****	Worked around a LessTif core dump when print menu appears.

****	Speedup when rereading large files with lots of deleted signals.


* Changes in Dinotrace 9.0f  9/29/1999

****	Allowed ' character in signals.  [Dominik Strasser]

****	Fixed a bug with vpd reading of vector length with #:#  [Dominik Strasser]

****	Fixed a bug which errored on "$timescale 10 ns"  (Space before units.)


* Changes in Dinotrace 9.0e  9/29/1999

****	Fixed a bug which would resize the screen incorrectly.

****	Fixed a postscript bug which would truncate the timestamps. [Rainer
	Mueller]

****	Latest LessTIF Fixed a bug which would omit cursor colors in scrollbar.

** Enhancements:

**	Signal Clear Highlight allows for unhighlighting all signals.

**	Signal Keep Highlight allows for deleting unhighlighted signals.

**	Customize Grid and grid_period allow placement of a grid on exactly
	each assertion, deassertion or both edges of a signal, rather then on
	a fixed time interval.

* Changes in Dinotrace 9.0d  11/30/1998

** Enhancements:

**	Signal Select now allows for deleting signals with X & Zs.

**	Signal Select now has two sorting functions.

***	Fixed bug with saving signal ordering and slow reread times. [Dan
	Lussier]

***	Added save_duplicates config command to avoid deleting verilog
	signals which occur many times.  [Dan Lussier]

***	Added hooks for linking other C programs to Dinotrace.  [Steve Hoover]

****	Fixed crash on Verilog Dumps.  [Lee Bradshaw]
