@@ -60,7 +60,7 @@
 @ifinfo
 This file documents the Dinotrace package for viewing signal waveforms.
 
-Copyright (C) 2000 by Wilson Snyder. @email{wsnyder@@ultranet.com}
+Copyright (C) 2000 by Wilson Snyder. @email{wsnyder@@world.std.com}
 
 Permission is granted to make and distribute verbatim copies of
 this manual provided the copyright notice and this permission notice
@@ -92,7 +92,7 @@ by the author.
 @subtitle Signal Waveform Tracing
 @subtitle for Dinotrace @value{VERSION}
 @subtitle @value{UPDATED}
-@author Wilson Snyder, @email{wsnyder@@ultranet.com}
+@author Wilson Snyder, @email{wsnyder@@world.std.com}
 
 @page
 @vskip 0pt plus 1filll
@@ -125,7 +125,7 @@ For the latest version, please see
 @uref{http://www.ultranet.com/~wsnyder/veripool/dinotrace}
 
 Please feel free to send comments and suggestions to
-@email{wsnyder@@ultranet.com} or @email{wsnyder@@iname.com}.  If you install this
+@email{wsnyder@@world.std.com} or @email{wsnyder@@iname.com}.  If you install this
 tool, please also send mail so that I can inform you of new
 releases.
 
@@ -2635,7 +2635,7 @@ files @file{ERRORS_SSM.TRA} and @file{ERRORS_CSR.TRA}.
 This chapter describes bug reporting and the known bugs in the current
 version.
 
-Please report bugs to @email{wsnyder@@ultranet.com}
+Please report bugs to @email{wsnyder@@world.std.com}
 
 The following bugs are known to exist:
 
