@@ -43,7 +43,7 @@
 @titlepage
 @title Dinotrace FAQ
 @subtitle @value{UPDATED}
-@author Wilson Snyder   <@email{wsnyder@@ultranet.com}>
+@author Wilson Snyder   <@email{wsnyder@@world.std.com}>
 @end titlepage
 
 This is a list of frequently asked questions (FAQ) for Dinotrace users.
@@ -51,7 +51,7 @@ A hypertext version is available on the World Wide Web at
 @uref{http://www.ultranet.com/~wsnyder/veripool/dinotrace/FAQ_toc.html}.
 
 Please send updates and corrections to the FAQ to
-@code{wsnyder@@ultranet.com}.
+@code{wsnyder@@world.std.com}.
 
 @c ======================================================================
 @chapter General Questions
@@ -81,7 +81,7 @@ water is murky if embeding Dinotrace.)
 @section Where should I report bugs and other problems with Dinotrace?
 
 Currently the author is tracking bugs; contact
-@email{wsnyder@@ultranet.com}.  There is a Anti-Spam filter on this
+@email{wsnyder@@world.std.com}.  There is a Anti-Spam filter on this
 account, so be sure you have a valid return address to meet the filter's
 challenge.
 
