@@ -5,7 +5,7 @@
 # 
 # This file is part of Dinotrace.  
 # 
-# Author: Wilson Snyder <wsnyder@ultranet.com> or <wsnyder@iname.com>
+# Author: Wilson Snyder <wsnyder@world.std.com> or <wsnyder@iname.com>
 # 
 # Code available from: http://www.ultranet.com/~wsnyder/veripool/dinotrace
 # 
